<resources>
    <string name="app_name">ProvaKevin</string>
    <string name="configuracao">Configuração</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="nome_invalido">Nome inválido</string>
    <string name="idade_invalida">Idade inválida</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="fechar">Fechar</string>
    <string name="hint_min">Min</string>
    <string name="hint_max">Max</string>
    <string name="dados_cliente">Dados Cliente</string>
    <string name="acao_cancelada">Ação cancelada</string>
    <string name="valida_config">O mínimo deve ser menor ou igual ao máximo</string>
</resources>
